<resources>
    <string name="app_name">Apex Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web_second">WebActivitySecond</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>

    <!-- Text donate tab -->
    <string name="donate_text">
    <![CDATA[
       <font color=#712123>Hi! Support the app with a donation!</font><br><br>
        Apex Assistant is completely free and supported only by your donations.<br><br>
        If you liked the application, support it with a donation, it motivates us to further improve.
    ]]>
    </string>

    <!-- Text about tab -->
    <string name="about_text">
    <![CDATA[
        This application is not a product of Electronic Arts.<br><br>
        The app contains information about the game Apex Legends<br><br>
        <font color=#712123>Legal notice</font><br><br>
        Privacy Policy <a href="https://edgenews.ru/android/apexlegends/privacy/privacy_policy.html">read.</a><br><br>
        The copyright of the images and materials contained is owned by Electronic Arts and is the intellectual property of Electronic Arts: © 2021 Electronic Arts. All rights reserved.<br><br>
        Apex Legends and the Apex Legends logo are registered trademarks or trademarks of Electronic Arts.<br><br>
        <font color=#712123>Additional information</font><br><br>
        - Current version: 2.5.1<br>
        - Developer: RB.<br>
        - Contact: ram219219@gmail.com
    ]]>
    </string>

    <!-- Tollbar menu -->
    <string name="toolbar_main">Main</string>
    <string name="toolbar_news">News</string>
    <string name="toolbar_twitter">Twitter</string>
    <string name="toolbar_legend">Legends</string>
    <string name="toolbar_wallpaper">Wallpapers</string>
    <string name="toolbar_weapons">Weapons</string>
    <string name="toolbar_stats">Statistics</string>
    <string name="toolbar_statsoptions">Options</string>
    <string name="toolbar_donate">Donate</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_about">About</string>
    <string name="title_activity_my_application">MyApplication</string>

    <!-- Donate buttons -->
    <string name="donate_button_one">Bronze</string>
    <string name="donate_button_two">Silver</string>
    <string name="donate_button_three">Gold</string>
    <string name="donate_button_four">Diamond</string>

    <!-- Settings -->
    <string name="settings_text">
        <![CDATA[
           <font color=#712123> Premium feature.</font><br><br>
            Want to turn off ads for 24 hours in the app? Please watch the video!
        ]]>
    </string>
    <string name="settings_button">Disable ads for 24 hours</string>
    <string name="settings_message">Ads disabled for 24 hours</string>

    <!-- Settings -->
    <string name="statisticoptions_text">
        <![CDATA[To track statistics, enter the player name.<br><br>
        Statistics are updated every 10 hours. Supports tracking for multiple players.<br><br>
        Example for input: <font color=#712123>HeyImLifeline</font>
        ]]>
    </string>
    <string name="statisticoptions_title_stats">STATISTICS</string>
    <string name="statisticoptions_title_players">PLAYERS</string>
    <string name="statisticoptions_button_add">ADD</string>
    <string name="statisticoptions_player">PLAYER NAME</string>
    <string name="statisticoptions_field_empty">FIELD EMPTY</string>
    <string name="statisticoptions_field_added">PLAYER ADDED</string>
    <string name="statisticoptions_field_notfound">PLAYER NOT FOUND</string>
    <string name="statisticoptions_player_info">INFO</string>
    <string name="statisticoptions_player_delete">DELETE</string>

    <!-- Statistics -->
    <string name="statistics_title_overall">OVERALL</string>
    <string name="statistics_title_kills">KILLS</string>
    <string name="statistics_gamesplayed">GAMES PLAYED</string>
    <string name="statistics_creepingbarragedamage">CREEPING BARRAGE DAMAGE</string>
    <string name="statistics_topthree">TOP 3</string>
    <string name="statistics_damage">DAMAGE</string>
    <string name="statistics_droppeditems">DROPPED ITEMS</string>
    <string name="statistics_beaconsscanned">BEACONS SCANNED</string>
    <string name="statistics_pistolkills">PISTOL</string>
    <string name="statistics_kills">KILLS</string>
    <string name="statistics_arkills">RIFLE</string>
    <string name="statistics_killsdeaths">KILLS / DEATHS</string>
    <string name="statistics_beasthuntkills">HUNT</string>
    <string name="statistics_headshots">HEADSHOTS</string>

    <!-- Weapons -->
    <string name="weapons_dps">DPS</string>
    <string name="weapons_rpm">RPM</string>
    <string name="weapons_magazine">MAGAZINE</string>
    <string name="weapons_reload">RELOAD</string>
    <string name="weaponstab_energy">Energy</string>
    <string name="weaponstab_heavy">Heavy</string>
    <string name="weaponstab_light">Light</string>
    <string name="weaponstab_shotgun">Shotgun</string>
    <string name="weaponstab_sniper">Sniper</string>
    <string name="weaponstab_unique">Unique</string>
    <string name="weaponstab_arrow">Arrow</string>

    <!-- News link -->
    <string name="news_link">https://www.ea.com/games/apex-legends/news</string>

    <!-- Wallpaper -->
    <string name="wallpaper_set">Set</string>
    <string name="wallpaper_downloading">Downloading ...</string>
    <string name="wallpaper_loaded">Loaded</string>

    <!-- Legend -->
    <string name="legends_json_dir">Legends/en/legends_en.json</string>
    <string name="weapons_json_dir" translatable="false">Weapons/en/weapons_en.json</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>