<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_news"
            android:checked="true"
            android:icon="@drawable/ic_picture"
            android:title="@string/toolbar_news" />
        <item
            android:id="@+id/nav_item_twitter"
            android:icon="@drawable/menu_twitter3"
            android:title="@string/toolbar_twitter" />
        <item
            android:id="@+id/nav_item_legends"
            android:icon="@drawable/menu_legends"
            android:title="@string/toolbar_legend" />
        <item
            android:id="@+id/nav_item_weapons"
            android:icon="@drawable/ic_wallpapper"
            android:title="@string/toolbar_weapons" />
        <item
            android:id="@+id/nav_item_wallpaper"
            android:icon="@drawable/ic_wallpaper"
            android:title="@string/toolbar_wallpaper" />
        <item
            android:id="@+id/nav_item_stats"
            android:icon="@drawable/ic_statistics2"
            android:title="@string/toolbar_stats" />
        <item
            android:id="@+id/nav_item_donate"
            android:icon="@drawable/ic_donate"
            android:title="@string/toolbar_donate" />
        <item
            android:id="@+id/nav_item_statsoptions"
            android:icon="@drawable/ic_settings2"
            android:title="@string/toolbar_statsoptions" />
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_info"
            android:title="@string/toolbar_about" />
    </group>
</menu>