<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/start_imageView"
            android:layout_width="250dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_logo" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:autoLink="none"
            android:text="Привет! Поддержи приложение донатом!"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button_donate_lvl_one"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_donate_click"
                android:textColor="@drawable/text_donate_click"
                android:text="@string/donate_button_one"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_donate_lvl_two"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_donate_click"
                android:textColor="@drawable/text_donate_click"
                android:text="@string/donate_button_two"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/button_donate_lvl_three"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_donate_click"
                android:textColor="@drawable/text_donate_click"
                android:text="@string/donate_button_three"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_donate_lvl_four"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_donate_click"
                android:textColor="@drawable/text_donate_click"
                android:text="@string/donate_button_four"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>