<LinearLayout
    android:id="@+id/legend_block"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical"
    android:background="@drawable/background_bar"
    android:layout_marginBottom="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/legend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:text="@string/statistics_title_overall"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_gamesplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_gamesplayed"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/data_gamesplayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider20"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_headshots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_headshots"
            android:textColor="@color/red"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/data_headshots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider41"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_topthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_topthree"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/data_topthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider50"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_damage"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/data_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider40"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_droppeditems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_droppeditems"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/data_droppeditems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider52"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_pistolkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_pistolkills"
            android:textColor="@color/red"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/data_pistolkills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/stats_dots" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_kills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/statistics_kills"
            android:textColor="@color/red"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/data_kills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:id="@+id/divider53"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/stats_dots" />
</LinearLayout>