<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">
            <EditText
                android:id="@+id/edit_text"
                android:hint="@string/statisticoptions_player"
                android:textColorHint="@color/grey_dark"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textColor="@color/grey_dark"
                android:textSize="15sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="200dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/statssetting_inputfield"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:backgroundTint="@null"
                android:background="@drawable/button_add_click"
                android:textColor="@drawable/text_add_pressed"
                android:text="@string/statisticoptions_button_add"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginBottom="15dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:background="@drawable/background_bar">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/statistics_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/statisticoptions_title_stats"
                    android:textColor="@color/dark_red"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/statistics_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text for stats"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/players_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="0dp"
            android:layout_marginBottom="20dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/background_bar">
            <TextView
                android:id="@+id/data_mode20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/statisticoptions_title_players"
                android:textColor="@color/dark_red"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/players_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:background="@drawable/background_bar">
        </LinearLayout>


    </LinearLayout>
</ScrollView>