<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weapon_item_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/raw_background"
    android:gravity="top"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">
        <ImageView
            android:id="@+id/weapon_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:background="@color/yellow"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:paddingBottom="40dp"
            android:scaleType="fitCenter"
            ads:srcCompat="@drawable/energy_havoc" />
        <TextView
            android:id="@+id/weapon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="30dp"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingRight="10dp"
            android:text="Weapon name"
            android:background="@color/dark_red"
            android:textColor="@color/white" />
        <RelativeLayout
            android:id="@+id/damage_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/statistics_damage"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/data_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/damage_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_dps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/weapons_dps"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/data_dps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/damage_beaconsscanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_rpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/weapons_rpm"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/data_rpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_magazine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_magazine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/weapons_magazine"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/data_magazine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/weapons_reload"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/data_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>